--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,11 +1,13 @@
 {
+  "Firestore": {
+    "ProjectId": "conexaopadrao-ceac1",
+    "CredentialsPath": "C://Users/David//trilha-net-api-desafio//conexaopadrao-ceac1-922f2a0982c2.json"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "ConexaoPadrao": "COLOCAR SUA CONNECTION STRING AQUI"
-  }
+  "AllowedHosts": "*"
 }
