--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Firestore": {
+    "ProjectId": "conexaopadrao-ceac1",
+    "CredentialsPath": "C://Users/David/trilha-net-api-desafio/conexaopadrao-ceac1-922f2a0982c2.json"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
